<resources>
    <string name="app_name">MSS</string>


    <string name="mainmenu">MENU</string>
    <string name="profile">PROFILE</string>
    <string name="changepassword">CHANGE PASSWORD</string>
    <string name="logout">LOGOUT</string>

    <string name="login">LOGIN</string>
    <string name="register">Click hear to Register</string>


    //Comman
    <string name="submit">SUBMIT</string>
    <string name="cancel">CANCEL</string>
    <string name="back">BACK</string>
    <string name="get">GET</string>
    <string name="export">EXPORT</string>
    <string name="compulsory">All the field marked <font color='#FF0000'>*</font> are compulsory</string>

    <string name="attendance">Attendance</string>
    <string name="apply">Leave\nApplication</string>
    <string name="leaves">Employees\nOn Leave</string>
    <string name="work">Daily\nWork</string>

    <string name="employee">Employee\nDetails </string>
    <string name="holiday">Holiday\nDetails </string>

    <string name="approve">Approve\nLeave</string>
    <string name="attendetails">Attendance\nDetails</string>
    <string name="leavedetails">Leave\nDetails</string>
    <string name="workdetails">Work\nDetails</string>
    <string name="inouttime">Shift\nTime</string>
    <string name="message">Whatsapp\nLeave List</string>
    <string name="server">Server\nMetrics</string>

    <string name="empfirstname">Employee First Name<font color='#FF0000'>*</font></string>
    <string name="empmidname">Employee Middle Name</string>
    <string name="emplastname">Employee Last Name<font color='#FF0000'>*</font></string>
    <string name="mobileno">Mobile No<font color='#FF0000'>*</font></string>
    <string name="altmobileno">Alt Mobile No</string>
    <string name="dob">Dete Of Birth<font color='#FF0000'>*</font></string>
    <string name="doj">Dete Of Joining<font color='#FF0000'>*</font></string>
    <string name="password">Enter Password<font color='#FF0000'>*</font></string>
    <string name="repassword">Confirm Password<font color='#FF0000'>*</font></string>

    <string name="approveL">Approve</string>
    <string name="decline">Decline</string>
    <string name="title_activity_attendance_details">MSS</string>

</resources>