<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="#CACACAFF">

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/round_corners">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtLblUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name:-  "
                        android:textStyle="bold|italic"
                        android:textSize="20dp"/>

                    <TextView
                        android:id="@+id/txtLblUserEmployeeID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtLblUsername"
                        android:text="Email ID:-  "
                        android:textStyle="bold|italic"
                        android:textSize="20dp"/>

                    <TextView
                        android:id="@+id/txtLblDesignation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtLblUserEmployeeID"
                        android:text="Mobile No:-  "
                        android:textStyle="bold|italic"
                        android:textSize="20dp"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtUserFullName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="User Full Name "
                        android:textStyle="italic"
                        android:textSize="20dp"/>

                    <TextView
                        android:id="@+id/txtEmailID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtUserFullName"
                        android:text="Email ID "
                        android:textStyle="italic"
                        android:textSize="20dp"/>

                    <TextView
                        android:id="@+id/txtMobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtEmailID"
                        android:text="Mobile No "
                        android:textStyle="italic"
                        android:textSize="20dp"/>
                </RelativeLayout>
            </LinearLayout>
        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/marqueeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="#000"
            android:padding="10dp"
            android:textSize="16sp"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:layout_marginTop="10dp"/>


        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"/>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/layout_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            app:justifyContent="center"
            app:flexWrap="wrap">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnAttendance"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_attendance"
                    android:text="@string/attendance"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:visibility="gone"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/btnApply"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_apply"
                    android:text="@string/apply"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:visibility="gone"/>

            </RelativeLayout>



            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/btnDailyWork"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_dailywork"
                    android:text="@string/work"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:visibility="gone"/>

            </RelativeLayout>


        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"/>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/layout_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            app:justifyContent="center"
            app:flexWrap="wrap">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <Button
                    android:id="@+id/btnEmployee"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_employee"
                    android:text="@string/employee"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:visibility="gone"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <Button
                    android:id="@+id/btnHoliday"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_holiday"
                    android:text="@string/holiday"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:visibility="gone"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <Button
                    android:id="@+id/btnLeaves"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_leave"
                    android:text="@string/leaves"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:visibility="gone"/>

            </RelativeLayout>

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"/>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/layout_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            app:justifyContent="center"
            app:flexWrap="wrap">

            <RelativeLayout
                android:id="@+id/badge_layout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <RelativeLayout
                    android:id="@+id/layApprove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btnApprove"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/ic_approve"
                        android:text="@string/approve"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:visibility="gone"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/badge_notification_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/layApprove"
                    android:background="@drawable/badge_item_count"
                    android:text="0"
                    android:textColor="#FFF"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="visible"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <Button
                    android:id="@+id/btnAttenDetails"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_attendetails"
                    android:text="@string/attendetails"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:visibility="gone"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <Button
                    android:id="@+id/btnLeaveDetails"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_leavedetails"
                    android:text="@string/leavedetails"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:visibility="gone"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <Button
                    android:id="@+id/btnWorkDetails"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_workdetails"
                    android:text="@string/workdetails"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:visibility="gone"/>
            </RelativeLayout>

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"/>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAttnLeaveList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Attendance and Leave List"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"/>

                <ListView
                    android:id="@+id/lvEmployeeList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scrollbars="vertical"/>
            </LinearLayout>
        </com.google.android.flexbox.FlexboxLayout>
    </LinearLayout>
</ScrollView>